updates to pages

--- a/about.html
+++ b/about.html
@@ -1,14 +1,18 @@
 ---
 layout: default
 ---
-
+<div class="scene-element">
   <a href="work.html">
     <div class="nav-left cursor-work-left"></div>
   </a>
 
-  <div class="main-div" id="main-body">
-    <div>
-      <p class="about-me">With a background in industrial design and programming, I am passionate about creating interactive experiences and services with a variety of media. I talk to computers using <span class="bold">HTML, CSS, Javascript, JQuery and C#</span>. In my spare time I also like to create things using <span class="bold">Unity, Arduino, Processing and 3D.</span></p>
+  <div class="main-div overflow" id="main-body">
+    <div class="about-me">
+      <p class="bold about-header">Who am I?</p>
+      <p>I am a Sydney based UX and service designer with experience spanning <span class="bold">research</span>, <span class="bold">product development</span> and <span class="bold">digital design</span>. With a background in industrial design and programming, I am passionate about creating interactive experiences and services using a variety of media.</p>
+      <p class="bold about-header">Core Skills</p>
+      <p>I sit somewhere in between designer and developer. I am experienced in working across the entire product lifecycle, from the early stages of concept development through to product realisation. From a software perspective, I hold a broad knowledge of where design, information systems and development align. My core programming languages are <span class="bold">HTML, CSS, Javascript, JQuery and C#</span>.</p>
+      <!-- <p>With a background in industrial design and programming, I am passionate about creating interactive experiences and services with a variety of media. I talk to computers using <span class="bold">HTML, CSS, Javascript, JQuery and C#</span>. In my spare time I also like to create things using <span class="bold">Unity, Arduino, Processing and 3D.</span></p> -->
       <!-- <p class='blog'>To see what I’m currently working on have a look at my blog <a class='link'>here</a>.</p> -->
     </div>
   </div>
@@ -16,3 +20,4 @@ layout: default
   <a href="index.html">
     <div class="nav-right cursor-home-right"></div>
   </a>
+</div>
