--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 layout: default
 ---
 
-  <a href="about.html">
-    <div class="nav-left cursor-about-left"></div>
-  </a>
+	<div class="scene-element">
+		<div class='mobile-div'>
+			<p class='mobile-greeting'>Morgan Thomas is a UX Designer based in Sydney, Australia</p>
+		</div>
+	  <a href="about.html">
+	    <div class="nav-left cursor-about-left"></div>
+	  </a>
 
-  <div class="main-div main-div-cursor">
-<!--   	<p class='mobile-greeting'>Morgan Thomas is a UX Designer based in Sydney, Australia</p> -->
-      <img src="../assets/img/home/welcome-cursor.png" class="follow"/>
+	  <div class="main-div main-div-cursor">
+	      <img src="../assets/img/home/welcome-cursor.png" class="follow"/>
+	  </div>
+
+	  <a href="work.html">
+	    <div class="nav-right cursor-work-right"></div>
+	  </a>
   </div>
-
-  <a href="work.html">
-    <div class="nav-right cursor-work-right"></div>
-  </a>
