--- a/work.html
+++ b/work.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<div class="scene-element">
   <a href="index.html">
     <div class="nav-left cursor-home-left"></div>
   </a>
@@ -16,3 +17,5 @@ layout: default
   <a href="about.html">
     <div class="nav-right cursor-about-right"></div>
   </a>
+</div>
+  
